// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<ForwardRef(Paper)
  className="paper"
  elevation={3}
  square={true}
>
  <ForwardRef(InputBase)
    className="input"
    data-qa="snap-qa"
    disabled={true}
    fullWidth={true}
    inputProps={
      Object {
        "aria-label": "Snaptest",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    placeholder="Snaptest"
    value=""
  />
  <ForwardRef(IconButton)
    aria-label="Snaptest"
    className="inputButton"
    color="primary"
    data-qa="search-button"
    disabled={true}
    onClick={[Function]}
    size="small"
  >
    <Memo(ForwardRef(SearchIcon))
      className="inputSVG"
    />
  </ForwardRef(IconButton)>
</ForwardRef(Paper)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<ForwardRef(Paper)
  className="paper"
  square={true}
>
  <ForwardRef(InputBase)
    className="input"
    fullWidth={true}
    inputProps={
      Object {
        "aria-label": "Search...",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    placeholder="Search..."
    value=""
  />
  <ForwardRef(IconButton)
    aria-label="Search..."
    className="inputButton"
    color="primary"
    data-qa="search-button"
    onClick={[Function]}
    size="small"
  >
    <Memo(ForwardRef(SearchIcon))
      className="inputSVG"
    />
  </ForwardRef(IconButton)>
</ForwardRef(Paper)>
`;
